# evo

./: Makefile.am  autogen.sh  configure.ac  rules.txt
common/: .kdev_include_paths  Makefile.am  PlanckTicker.cpp  PlanckTicker.hpp  compat.hpp  i_cloneable.hpp  i_stringable.hpp  null_output_iterator.hpp  open_gl_renderable.cpp  open_gl_renderable.hpp  result.cpp  result.hpp  spherical_thing.cpp  spherical_thing.hpp  string.cpp  string.hpp  thread.cpp  thread.hpp  time_measures.cpp  time_measures.hpp  util.hpp
wiztest/: Makefile.am
wiztest/src/: EvoUniverse.hpp  Makefile.am  wiz.cpp  wiz.hpp  wiztest.cpp
